implemented a recursive fuction to check for .git (.shiz) folder,init functions and global versions of config

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
                 "-I",
                 "include\\",
                 "-o",
-                "shiz.exe"
+                "shiz"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
