added shiz add and shiz add -f for files (diractories not imlemented yet)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,10 +5,12 @@
             "label": "C/C++: gcc.exe build active file",
             "command": "C:\\Strawberry\\c\\bin\\gcc.exe",
             "args": [
+                
                 "-fdiagnostics-color=always",
                 "src\\*.c",
                 "-I",
                 "include\\",
+                "-lcrypto",
                 "-o",
                 "shiz"
             ],
